added all the pages that are connected

--- a/myportfolio.html
+++ b/myportfolio.html
@@ -21,7 +21,7 @@
 		<a href="contact.html">Contact</a>
 	</div>
 	<div class="stuff" id="first">
-			<h1> Template for an About me Page</h1>
+			<h1> Template for an Portfolio Page</h1>
 			<p>my biohraphy text goes here. . .</p>
 	</div>
 	<div class="stuff" id="second">
